@@ -5,6 +5,7 @@ The following people have submitted changes which have been applied to the
 core:
 
 === SVN
+* Andrew Neil
 * zilkey
 * Mark Gallop
 * Bjorn Maeland
